--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <meta >
-    <meta >
-    <title> </title>
+    <meta name="author" content="Sharitonni Yzabela B. Tano">
+    <meta name="Laboratory activity number" content="3">
+    <title>JavaScript Conditions</title>
     <style>
-      
+    
     </style>
   </head>
   <body>
-    <p id="result">
-    <button onclick=" ()"> </button>
+    <p id="result"></p>
+    <button onclick="verifyMessage()"> </button>
   </body>
 </html>
