--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta name="author" content="Sharitonni Yzabela B. Tano">
     <meta name="Laboratory activity number" content="3">
     <title>JavaScript Conditions</title>
-    <style>
-    
-    </style>
+    <script src="script.js"></script>
   </head>
   <body>
     <p id="result"></p>
-    <button onclick="verifyMessage()"> </button>
+    <button onclick="verifyMessage()">Click me to verify a message!</button>
   </body>
 </html>
